fix overflow

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -16,6 +16,7 @@ body {
   max-width: var(--container-width);
   margin: 0 auto;
   padding: 0 24px;
+  overflow-x: hidden;
 }
 ::selection {
   background: var(--color-muted);
